--- a/content/archive/index.Rmd
+++ b/content/archive/index.Rmd
@@ -1,53 +1,56 @@
 ---
 title: "Archive"
-subtitle: ""
+subtitle: "A timeline of posts for convenient browsing"
 excerpt: "testing the excerpt field"
-date: 2020-12-30
+date: 2021-12-23
 author: "Thomas Lieb"
 draft: true
 layout: single
 url: archive
+slug: archive
 ---
 
-```{r include=FALSE}
-# get function to build archive
-scan_yaml <- getFromNamespace("scan_yaml", "blogdown")
+You can check posts also by [tags](../tags) or [categories](../categories)
 
+```{r include=FALSE}
+source("../../R/functions.R")
 require(tidyverse)
 require(lubridate)
 
-# get yamls
+# get yamls (temporarily switch wd to access them correctly)
 wd <- getwd()
 setwd("../../")
 all_yaml <- scan_yaml()
 wd <- getwd()
+
 # extract blog yamls
 blog_yamls <- all_yaml[
   names(all_yaml) %>% str_detect("content/blog/.*/index.md")]
 # remove drafts
-#blog_yamls <- blog_yamls[map(blog_yamls, ~ !.x$draft) %>% unlist()]
-# order by date
-blog_yamls <- blog_yamls[map(blog_yamls, ~ .x$date) %>% unlist() %>% order()]
-
-# What I need
-# * title
-# * date
-# * remove drafts
-
-x <- blog_yamls %>% imap(~ list(
-  title = .x$title, 
-  year = year(.x$date), 
-  month = month(.x$date, label = TRUE, abbr = FALSE),
-  link = str_extract(.y, "(?<=content/).*(?=index\\.md)")))
-
-df <- do.call(rbind.data.frame, x) %>% remove_rownames() %>% 
-  mutate(text = glue::glue("[{title}](../{link})")) %>% 
-  select(year, month, text) %>% 
-  arrange(desc(year), desc(month), text)
-
-X <- rle(df$year)
-Y <- cumsum(c(1, X$lengths[-length(X$lengths)]))
-df[setdiff(1:nrow(df), Y), "year"] <- NA
+blog_yamls <- blog_yamls[map(blog_yamls, ~ !.x$draft) %>% unlist()]
+if (length(blog_yamls) > 0) {
+  # order by date
+  blog_yamls <-
+    blog_yamls[map(blog_yamls, ~ .x$date) %>% unlist() %>% order()]
+  # extract the needed data
+  blog_yamls <- blog_yamls %>% imap( ~ list(
+    title = .x$title,
+    year = year(.x$date),
+    month = month(.x$date, label = TRUE, abbr = FALSE),
+    link = str_extract(.y, "(?<=content/).*(?=index\\.md)")
+  ))
+  # generate data frame
+  df <- reduce(blog_yamls, bind_rows, .init = data.frame()) %>%
+    mutate(text = glue::glue("[{title}](../{link})")) %>%
+    select(year, month, text) %>%
+    arrange(desc(year), desc(month), text)
+  # make ready for printing
+  df <- df %>%
+    remove_cons_duplicates("year") %>%
+    remove_cons_duplicates("month")
+} else {
+  df <- data.frame()
+}
 ```
 
 
@@ -59,21 +62,21 @@ require("tidyverse")
 require("magrittr")
 options(knitr.kable.NA = '')
 
-# to get from SCSS file "../../assets/mysky-hex.scss"
-color <- "#274b9f"
+scss_custom <- readLines("../../assets/mysky-hex.scss")
+color <- scss_custom[scss_custom %>% str_detect("headingColorCustom")] %>% 
+  str_extract("(?<=headingColorCustom: )#[:alnum:]*(?=;)")
 
-# df <- data.frame(
-#   year = c("2021", "", "", "2020"),
-#   month = c("December", "", "July", "November"),
-#   post = c("post A", "post B", "post C", "[post D](https://gapthemind.info)")
-#   )
-knitr::kable(df, col.names = NULL, table.envir = "mytable") %>% 
-  kable_minimal(full_width = F, position = "left") %>% 
-  column_spec(1, width = "7rem", bold = TRUE, color = color, 
-              extra_css = "font-size: 3rem; vertical-align: text-bottom;") %>% 
-  column_spec(2, width = "7rem", bold = TRUE, 
-              extra_css = "font-size: 2.25rem; vertical-align: text-bottom;") %>% 
-  column_spec(3, extra_css = "vertical-align: text-bottom;") #padding: 0 10px 0 0;
+if (nrow(df) > 0) {
+  knitr::kable(df, col.names = NULL, table.envir = "mytable") %>% 
+    kable_minimal(full_width = F, position = "left") %>% 
+    column_spec(1, width = "7rem", bold = TRUE, color = color,
+                extra_css = "font-size: 3rem; vertical-align: text-bottom;") %>% 
+    column_spec(2, width = "7rem", bold = TRUE, 
+                extra_css = "vertical-align: text-bottom;") %>% 
+    column_spec(3, extra_css = "vertical-align: text-bottom;padding: 0 0 7px 0;")
+} else {
+  cat(":sob: *currently no blog posts available* :sob:")
+}
 ```
 </div>
 
